--- a/blog/build.gradle
+++ b/blog/build.gradle
@@ -11,12 +11,17 @@ java {
 	sourceCompatibility = '11'
 }
 
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
 repositories {
 	mavenCentral()
 	maven { url 'https://repo.spring.io/milestone' }
 	maven { url 'https://repo.spring.io/snapshot' }
 }
-
 ext {
 	mapstructVersion = "1.5.3.Final"
 	lombokVersion = "1.18.24"
@@ -24,27 +29,22 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security:2.5.5'
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.4'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
+	implementation 'org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE'
+	implementation 'org.springframework.security:spring-security-jwt:1.0.9.RELEASE'
+	implementation 'mysql:mysql-connector-java:8.0.30'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	compileOnly"org.projectlombok:lombok:${lombokVersion}"
+	annotationProcessor"org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
 	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}", "org.projectlombok:lombok:${lombokVersion}"
 
-	//implementation 'org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE'
-	//implementation 'org.springframework.security:spring-security-jwt:1.0.9.RELEASE'
-	// /
 
 
-	//compileOnly"org.projectlombok:lombok:${lombokVersion}"
-	//annotationProcessor"org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
-
-	//implementation 'javax.servlet:javax.servlet-api:4.0.1'
-
-	//implementation 'org.springframework.boot:spring-boot-starter:2.7.7'
-	// implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
 }
 
