--- a/blog/src/main/resources/application.properties
+++ b/blog/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.dataSource.url=jdbc:mysql://localhost:3306/blognoticias
 spring.datasource.username=root
-spring.datasource.password=PandasBebes-502
+spring.datasource.password=As.2021$
 spring.application.name=blog
 server.servlet.context-path=/bloog/api/v1
 server.port = 20034
-tokenSecret=Ev0FVmsLSa5nTAjcfCdnJpkj7relSVvW
