SE TERMINARON LOS LAS TABLAS CON SUS RESPECTIVOS CONTROLADORES

--- a/blog/src/main/resources/application.properties
+++ b/blog/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.dataSource.url=jdbc:mysql://localhost:3306/blognoticias
 spring.datasource.username=root
-spring.datasource.password=As.2021$
+spring.datasource.password=PandasBebes-502
 spring.application.name=blog
 server.servlet.context-path=/bloog/api/v1
 server.port = 20034
